RESOLVED FIXED77203
Web Inspector: console evaluation doesn't work on breakpoint in pages with CSP
https://bugs.webkit.org/show_bug.cgi?id=77203
Summary Web Inspector: console evaluation doesn't work on breakpoint in pages with CSP
Yury Semikhatsky
Reported 2012-01-27 04:54:53 PST
1. Open a page with content-security-policy prohibiting evals. 2. Set a breakpoint and make execution pause on it. 3. Try to evaluate something in the inspector console. Result: Exception, eval is prohibited. Related bug: https://bugs.webkit.org/show_bug.cgi?id=60800
Attachments
Patch (12.38 KB, patch)
2012-01-27 05:05 PST, Yury Semikhatsky
no flags
Patch (15.24 KB, patch)
2012-01-27 06:13 PST, Yury Semikhatsky
pfeldman: review+
webkit.review.bot: commit-queue-
Yury Semikhatsky
Comment 1 2012-01-27 05:05:02 PST
Yury Semikhatsky
Comment 2 2012-01-27 05:07:03 PST
WebKit Review Bot
Comment 3 2012-01-27 05:22:03 PST
Comment on attachment 124292 [details] Patch Attachment 124292 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11349694
Yury Semikhatsky
Comment 4 2012-01-27 06:13:33 PST
Yury Semikhatsky
Comment 5 2012-01-27 06:15:08 PST
Same patch with a test for the new functionality. It depends on a change in V8 API which is not rolled yet.
WebKit Review Bot
Comment 6 2012-01-27 06:43:00 PST
Comment on attachment 124303 [details] Patch Attachment 124303 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11191747
Yury Semikhatsky
Comment 7 2012-02-03 06:48:00 PST
Note You need to log in before you can comment on or make changes to this bug.