Web Inspector: console evaluation doesn't work on breakpoint in pages with CSP https://bugs.webkit.org/show_bug.cgi?id=77203

Inspector console evaluation now works when debugger is paused in a page with
content-security-policy prohibiting evals.

Reviewed by Pavel Feldman.

Source/WebCore:

Test: inspector/debugger/eval-on-pause-blocked.html

* bindings/js/JSInjectedScriptHostCustom.cpp:
* bindings/js/ScriptState.cpp:
(WebCore::evalEnabled):
(WebCore):
(WebCore::setEvalEnabled):
* bindings/js/ScriptState.h:
(WebCore):
* bindings/v8/ScriptObject.h:
(WebCore::ScriptObject::ScriptObject):
* bindings/v8/ScriptState.cpp:
(WebCore::evalEnabled):
(WebCore):
(WebCore::setEvalEnabled):
* bindings/v8/ScriptState.h:
(WebCore):
* bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
* inspector/InjectedScript.cpp:
(WebCore::InjectedScript::makeCall):
* inspector/InjectedScriptHost.idl:
* inspector/InjectedScriptSource.js:
(.):

LayoutTests:

* inspector/debugger/eval-on-pause-blocked-expected.txt: Added.
* inspector/debugger/eval-on-pause-blocked.html: Added.

Canonical link: https://commits.webkit.org/94598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106657 268f45cc-cd09-0410-ab3c-d52691b4dbfc