Source/WebCore/bindings/js/ScriptState.h
@@ -66,6 +66,9 @@ private:
 
 DOMWindow* domWindowFromScriptState(ScriptState*);
 
+bool evalEnabled(ScriptState*);
+void setEvalEnabled(ScriptState*, bool);
+
 ScriptState* mainWorldScriptState(Frame*);
 
 ScriptState* scriptStateFromNode(DOMWrapperWorld*, Node*);
