Source/WebCore/inspector/InjectedScriptSource.js
@@ -141,7 +141,7 @@ InjectedScript.prototype = {
 
     _parseObjectId: function(objectId)
     {
-        return InjectedScriptHost.evaluate("(" + objectId + ")");
+        return eval("(" + objectId + ")");
     },
 
     releaseObjectGroup: function(objectGroupName)
@@ -156,7 +156,7 @@ InjectedScript.prototype = {
 
     dispatch: function(methodName, args)
     {
-        var argsArray = InjectedScriptHost.evaluate("(" + args + ")");
+        var argsArray = eval("(" + args + ")");
         var result = this[methodName].apply(this, argsArray);
         if (typeof result === "undefined") {
             inspectedWindow.console.error("Web Inspector error: InjectedScript.%s returns undefined", methodName);
@@ -259,7 +259,7 @@ InjectedScript.prototype = {
 
     evaluate: function(expression, objectGroup, injectCommandLineAPI, returnByValue)
     {
-        return this._evaluateAndWrap(InjectedScriptHost.evaluate, InjectedScriptHost, expression, objectGroup, false, injectCommandLineAPI, returnByValue);
+        return this._evaluateAndWrap(inspectedWindow.eval, inspectedWindow, expression, objectGroup, false, injectCommandLineAPI, returnByValue);
     },
 
     callFunctionOn: function(objectId, expression, args, returnByValue)
@@ -271,7 +271,7 @@ InjectedScript.prototype = {
 
         if (args) {
             var resolvedArgs = [];
-            args = InjectedScriptHost.evaluate(args);
+            args = eval(args);
             for (var i = 0; i < args.length; ++i) {
                 var objectId = args[i].objectId;
                 if (objectId) {
@@ -293,7 +293,7 @@ InjectedScript.prototype = {
 
         try {
             var objectGroup = this._idToObjectGroupName[parsedObjectId.id];
-            var func = InjectedScriptHost.evaluate("(" + expression + ")");
+            var func = eval("(" + expression + ")");
             if (typeof func !== "function")
                 return "Given expression does not evaluate to a function";
 
@@ -366,7 +366,7 @@ InjectedScript.prototype = {
 
     _callFrameForId: function(topCallFrame, callFrameId)
     {
-        var parsedCallFrameId = InjectedScriptHost.evaluate("(" + callFrameId + ")");
+        var parsedCallFrameId = eval("(" + callFrameId + ")");
         var ordinal = parsedCallFrameId.ordinal;
         var callFrame = topCallFrame;
         while (--ordinal >= 0 && callFrame)
